--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ pest_derive = "2.7"
 log = "0.4"
 layout-rs = "0.1"
 fastrand = "2.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 
 [profile]
 
